--- a/config.gradle
+++ b/config.gradle
@@ -37,6 +37,7 @@ ext {
             //rxjava
             "rxjava"                : "io.reactivex.rxjava2:rxjava:2.0.6",
             "rxandroid"             : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            "rxpermissions"         : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar",
             "rxbinding2"            : "com.jakewharton.rxbinding2:rxbinding:2.0.0",
             rxlifecycle2            : "com.trello.rxlifecycle2:rxlifecycle:2.1.0",
             rxlifecomponents        : "com.trello.rxlifecycle2:rxlifecycle-components:2.1.0",
