--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.android.coolPlay.MainActivity"
@@ -53,7 +54,7 @@
         <activity
             android:name="com.android.coolPlay.ui.news.ArticleReadActivity"
             android:screenOrientation="portrait"
-            android:hardwareAccelerated="true"
+            android:hardwareAccelerated="false"
             android:theme="@style/AppTheme.Transparent"
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
@@ -73,7 +74,7 @@
             android:name="com.android.coolPlay.ui.jandan.ReadActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Transparent"
-            android:hardwareAccelerated="true"
+            android:hardwareAccelerated="false"
 
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
